# FalconOCR

./: .gitignore  CMakeLists.txt  README.md
.codestyle/: .clang-format  .clang-tidy
assets/: README.md
assets/glyphs/: README.md
assets/langpacks/: README.md
assets/langpacks/arabic_digits/: glyphs.txt
assets/langpacks/cyrillic_basic/: glyphs.txt
assets/langpacks/devanagari_sample/: glyphs.txt
assets/langpacks/greek_basic/: glyphs.txt
assets/langpacks/han_sample/: glyphs.txt
assets/langpacks/kana_sample/: glyphs.txt
assets/samples/: README.md
docs/: architecture.md
include/falcon/app/: MainWindow.h
include/falcon/core/: Binarize.h  Classifier.h  Features.h  Geometry.h  GlyphDB.h  Image.h  Normalize.h  Raster.h  Segment.h
include/falcon/ocr/: OcrTypes.h  Pipeline.h
include/falcon/util/: String.h  Timer.h
scripts/: build.sh  cppcheck.sh  format.sh  test.sh  tidy.sh
src/: CMakeLists.txt
src/app/: MainWindow.cpp  WinMain.cpp
src/core/: Binarize.cpp  Classifier.cpp  Features.cpp  GlyphDB.cpp  Image.cpp  Normalize.cpp  Segment.cpp
src/ocr/: Pipeline.cpp
src/util/: String.cpp  Timer.cpp
tests/: CMakeLists.txt  sample_test.cpp
